--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
       experience.
       </p>
       <a
-        href="https://github.com/pranish2004/Movie_Watching_website"
+        href="https://pranish2004.github.io/Movie_Watching_website/"
         target="_blank"
         class="button"
         style="
